# fire_demo3_api

./: .env.example  .gitignore  API_REFERENCE.md  DEMO.tex  Dockerfile  FRONTEND_GUIDE.md  README.md  docker-compose.yml  index.html  pub.env  pyproject.toml
.github/workflows/: generate-doc.yml
.nginx/: dash_app.conf
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
models/: fire_incident_gb_model.onnx  fire_model_features_mapping.json  survival_forecaster.py
models/apparatus_clear_model/: fire_model_features_mapping.json
models/incident_prediction_system/: clustering_data.csv  config.json  grid_geometry.geojson  incident_probabilities.pkl  scaler.pkl  survival_model.pkl
models/incident_prediction_system_fire/: clustering_data.csv  config.json  incident_probabilities.pkl  scaler.pkl  survival_model.pkl
src/: app.py  main.py  sim_result_processor.py
src/api/: main.py
src/backend/: config.py  main.py
src/core/: config.py
src/db/: crud.py  models.py  session.py  storage.py
src/engine/: incidents.py  incidents_variants.py  results.py  simulation.py
src/models/: survival_forecaster.py
src/schemas/: engine.py  incidents.py
src/tests/: test_simulator.md
src/worker/: main.py  processor.py  runner.py
tests/: conftest.py  test_growth_v1_generator.py  test_incidents_route.py  test_legacy_survival.py  test_simulation_routing.py  test_survival_sampling.py
tests/e2e/: test_comparison_and_queue.py  test_job_lifecycle.py
tests/integration/: test_auth_routes.py  test_auth_routes_extra.py  (+7 more)
(+54 files in other folders)
