[project]
name = "fire-demo3-api-v2"
version = "0.1.0"
description = "Fire simulator backend, industry-standard layout (auth + job queue + worker)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "uvicorn[standard]>=0.22",
    "pandas>=2.3.3",
    "geopandas>=1.1.1",
    "shapely>=2.1.2",
    "scikit-learn>=1.7.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.28.1",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend", "src/db", "src/worker", "src/engine", "src/core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]
